--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,7 +79,7 @@
     width: inherit;
     height: inherit;
     border-radius: inherit;
-    background: url(../img/anh2.jpg);
+    background: url(https://i.imgur.com/3Sqf7VU.png);
     background-size: cover;
     z-index: 2;
     display: flex;
@@ -220,7 +220,7 @@
     width: inherit;
     height: inherit;
     border-radius: inherit;
-    background: url(../img/anh1.jpg);
+    background: url(https://i.imgur.com/w4dpxgS.jpeg);
     background-size: cover;
     z-index: 1;
     display: flex;
